@@ -23,6 +23,11 @@ package com.eleybourn.bookcatalogue;
 import java.io.Serializable;
 import java.util.ArrayList;
 
+import com.eleybourn.bookcatalogue.utils.Logger;
+import com.eleybourn.bookcatalogue.utils.Utils;
+import com.eleybourn.bookcatalogue.utils.ViewTagger;
+import com.eleybourn.bookcatalogue.widgets.TouchListView;
+
 import android.app.ListActivity;
 import android.content.Context;
 import android.content.Intent;
@@ -211,14 +216,14 @@ abstract public class EditObjectList<T extends Serializable> extends ListActivit
 			// Ask the subclass to setup the list; we need this before 
 			// building the adapter.
 			if (savedInstanceState != null && mKey != null && savedInstanceState.containsKey(mKey)) {
-				mList = (ArrayList<T>) savedInstanceState.getSerializable(mKey);//.getParcelableArrayList(mKey);
+				mList = Utils.getListFromBundle(savedInstanceState, mKey);//.getParcelableArrayList(mKey);
 			}
 
 			if (mList == null) {
 				/* Get any information from the extras bundle */
 				Bundle extras = getIntent().getExtras();
 				if (extras != null && mKey != null) {
-					mList = (ArrayList<T>) extras.getSerializable(mKey); // .getParcelableArrayList(mKey);
+					mList = Utils.getListFromBundle(extras, mKey); // .getParcelableArrayList(mKey);
 				}
 				if (mList == null)
 					mList = getList();
@@ -507,7 +512,7 @@ abstract public class EditObjectList<T extends Serializable> extends ListActivit
             }
             
             // Save this views position
-            ViewTagger.setTag(v, R.id.TAG_POSITION, new Integer(position));
+            ViewTagger.setTag(v, R.id.TAG_POSITION, Integer.valueOf(position));
 
             {
             	// Giving the whole row ad onClickListener seems to interfere
